Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/BadAnnotation.out
BadAnnotation.java:11:29: compiler.err.intf.annotation.members.cant.have.params
1 error
